Update proteus to 0.2.5